[fix] fix growing self referencing command